; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/pci/extr_pci_iov_schema.c_pci_iov_config_get_num_vfs.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/pci/extr_pci_iov_schema.c_pci_iov_config_get_num_vfs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PF_CONFIG_NAME = common dso_local global i32 0, align 4
@IOV_CONFIG_NAME = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"num_vfs\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pci_iov_config_get_num_vfs(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = load i32, i32* @PF_CONFIG_NAME, align 4
  %7 = call i32* @nvlist_get_nvlist(i32* %5, i32 %6)
  store i32* %7, i32** %3, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = load i32, i32* @IOV_CONFIG_NAME, align 4
  %10 = call i32* @nvlist_get_nvlist(i32* %8, i32 %9)
  store i32* %10, i32** %4, align 8
  %11 = load i32*, i32** %4, align 8
  %12 = call i32 @nvlist_get_number(i32* %11, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  ret i32 %12
}

declare dso_local i32* @nvlist_get_nvlist(i32*, i32) #1

declare dso_local i32 @nvlist_get_number(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
